src/components/App.css
header {
  height: 3rem;
  padding: 10px;
  color: white;
  margin: 0;
}

.title {
  font-size: 1.5em;
  font-family: 'Leckerli One', cursive;
  margin: 0 auto;
}

.new-list, .list {
  width: 270px;
  border-radius: 3px;
  margin: 0.75em 0 0 0.75em;
  float: left;
}

.list-wrapper {
  height: 100vh;
  display: inline-block;
  vertical-align: top;
  white-space: normal;
  overflow-x: scroll;
}

.list {
  display: flex;
  flex-direction: column;
  max-height: 100%;
  position: relative;
  padding: 0.5em 0 0.75em 0.75em;
}

#root .new-list-input, .new-list-input:focus {
  border-bottom: none;
  margin-bottom: 0;
  box-shadow: none;
  padding-left: 8px;
}

.cursor-pointer {
  cursor: pointer;
}

.save-button {
  margin: 0 5px 8px 8px;
}

.close-icon {
  font-size: 30px;
  vertical-align: top;
}

.card-input, .card-input:focus {
  width: 96%;
  border-radius: 3px;
  border: 0;
}

.card-style {
  width: 96%;
  border-radius: 3px;
  padding: 5px 3px 5px 3px;
  margin: 3px 0 5px 0;
}

::-webkit-input-placeholder { /* Chrome/Opera/Safari */
  color: darkGray;
}
::-moz-placeholder { /* Firefox 19+ */
  color: darkGray;
}
:-ms-input-placeholder { /* IE 10+ */
  color: darkGray;
}
:-moz-placeholder { /* Firefox 18- */
  color: darkGray;
}

